--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <footer>
         <p>© 2025 Tüm Hakları Saklıdır.</p>
+        p><a href="privacy.html">Gizlilik Politikası ve Kullanım Koşulları</a></p>  
     </footer>
 </body>
 </html>
