--- a/privacy.html
+++ b/privacy.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gizlilik Politikası</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Gizlilik Politikası</h1>
-    <p>Bu web sitesi, yalnızca veri analizi amacıyla belirli anonim bilgileri toplamaktadır.</p>
-    <p>Kişisel bilgileriniz asla saklanmaz veya paylaşılmaz.</p>
-    <p>Web sitemiz hakkında daha fazla bilgi almak için bizimle iletişime geçebilirsiniz.</p>
+    <header>
+        <h1>Gizlilik Politikası</h1>
+    </header>
+
+    <main>
+        <section>
+            <p>
+             Bu web sitesi, kullanıcı deneyimini geliştirmek ve istatistiksel analizler yapmak amacıyla belirli verileri toplamaktadır. Kişisel veriler, kimlik bilgileri veya kullanıcıları doğrudan tanımlayabilecek herhangi bir bilgi toplanmaz.
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Tüm Hakları Saklıdır.</p> 
+    </footer>
 </body>
 </html>
+
