--- a/terms.html
+++ b/terms.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kullanım Koşulları</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Kullanım Koşulları</h1>
-    <p>Bu web sitesini kullanarak, aşağıdaki şartları kabul etmiş olursunuz:</p>
-    <ul>
-        <li>Web sitesindeki içerikleri izinsiz kopyalamayınız.</li>
-        <li>Siteyi yalnızca yasal amaçlarla kullanınız.</li>
-        <li>Gizliliğe saygı duyunuz ve kötüye kullanım yapmayınız.</li>
-    </ul>
+    <header>
+        <h1>Kullanım Koşulları</h1>
+    </header>
+
+    <main>
+        <section>
+            <p>
+                Kullanıcılar, bu web sitesini kullanırken belirlenen kurallara uymayı kabul eder. İçeriklerin 
+                izinsiz kopyalanması veya paylaşılması yasaktır. Web sitesi, kullanıcı verilerini saklamaz 
+                ve üçüncü taraflarla paylaşmaz.
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Tüm Hakları Saklıdır.</p> 
+    </footer>
 </body>
 </html>
